--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,12 +5,10 @@ jobs:
     name: Build, lint, and test on Node ${{ matrix.node }} and ${{ matrix.os }}
 
     runs-on: ${{ matrix.os }}
-    defaults:
-      run:
 
     strategy:
       matrix:
-        node: ['12.x', '14.x', '15.x']
+        node: ['15.x']
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
