--- a/.github/workflows/size.yml
+++ b/.github/workflows/size.yml
@@ -3,6 +3,9 @@ on: [pull_request]
 jobs:
   size:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: lib
     env:
       CI_JOB_NUMBER: 1
     steps:
