chore(release): fixing broken release-it config

--- a/lib/package.json
+++ b/lib/package.json
@@ -59,11 +59,13 @@
     ]
   },
   "release-it": {
-    "before:init": [
-      "npm run lint",
-      "npm test",
-      "npm build"
-    ],
-    "after:release": "echo Successfully released ${name} v${version} to ${repo.repository}."
+    "hooks": {
+      "before:init": [
+        "npm run lint",
+        "npm test",
+        "npm build"
+      ],
+      "after:release": "echo Successfully released ${name} v${version} to ${repo.repository}."
+    }
   }
 }
