--- a/.github/workflows/scheduled-issues.yml
+++ b/.github/workflows/scheduled-issues.yml
@@ -11,10 +11,10 @@ jobs:
       issues: write
       contents: read
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Process scheduled issue
-        uses: BigAB/scheduled-issues@v0.0.1
+      - uses: actions/checkout@v5
+      - name: Use Node.js
+        uses: actions/setup-node@v4
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          node-version: '24.x'
+      - name: Install dependencies
+        run: npm install
