--- a/.github/workflows/scheduled-issues.yml
+++ b/.github/workflows/scheduled-issues.yml
@@ -3,19 +3,30 @@ name: Scheduled Issues
 on:
   issues:
     types: [opened]
-  workflow_dispatch:
+  schedule:
+    # Run every hour
+    - cron: '0 * * * *'
+  workflow_dispatch:  # Allow manual trigger for testing
+
+permissions:
+  issues: write
+  contents: read
 
 jobs:
   process-scheduled-issue:
     runs-on: ubuntu-latest
-    permissions:
-      issues: write
-      contents: read
+    if: github.event_name == 'issues'
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v5
-
       - name: Process scheduled issue
-        uses: BigAB/scheduled-issues@v0.0.2
+        uses: BigAB/scheduled-issues@v0.0.3
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+
+  reopen-scheduled-issues:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
+    steps:
+      - name: Reopen scheduled issues
+        uses: BigAB/scheduled-issues/reopen@v0.0.3
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
